--- a/templates/dotnet/cd-steps-template.yml
+++ b/templates/dotnet/cd-steps-template.yml
@@ -29,7 +29,7 @@ steps:
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
       $(projectName) \
       $(pipeline.workspace)/install/$(projectName)
-  failOnStderr: true
+  # failOnStderr: true
   displayName: 'deploy helm chart'
 
 
