--- a/templates/java/ci-steps-template.yml
+++ b/templates/java/ci-steps-template.yml
@@ -62,7 +62,7 @@ steps:
     helm chart save $(helm package --app-version $(imageTag) --version $(helmChartVersion) ./$(chartHelmFile) | grep -o '/.*.tgz') $(registryName).azurecr.io/charts/$(projectName)
     helm chart push $(registryName).azurecr.io/charts/$(projectName):$(helmChartVersion)
     echo $(jq -n --arg version "$(helmChartVersion)" '{helmChartVersion: $version}') > $(build.artifactStagingDirectory)/variables.json
-    echo $(jq -n --arg name "$(projectName)" '{projectName: $name}') > $(build.artifactStagingDirectory)/variables.json
+    echo $(jq -n --arg name "$(projectName)" '{projectName: $name}') >> $(build.artifactStagingDirectory)/variables.json
   failOnStderr: true
   displayName: "helm package"
 
