--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -24,6 +24,7 @@ steps:
       --install \
       --wait \
       --version $helmChartVersion \
+      --name $projectName \
       --set image.repository=$(registryServerName)/$(projectName) \
       --set ingress.enabled=false \
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
