--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -29,7 +29,7 @@ steps:
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
       $(projectName) \
-      $(pipeline.workspace)/install/$(projectName)
+      $(pipeline.workspace)/install/**
   failOnStderr: false
   displayName: 'deploy helm chart'
 
