--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -15,7 +15,6 @@ steps:
     az aks get-credentials -n $(aks) -g $(rg)
     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
     helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
-    projectName=$(jq .projectName $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
     helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
     helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
     helm upgrade \
@@ -29,7 +28,7 @@ steps:
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
       $(projectName) \
-      $(pipeline.workspace)/install/.*
+      $(pipeline.workspace)/install/$(projectName)
   failOnStderr: false
   displayName: 'deploy helm chart'
 
