--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -14,7 +14,7 @@ steps:
     az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
     az aks get-credentials -n $(aks) -g $(rg)
     echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
-    helmChartVersion=$(jq .helmChartVersion .projectName $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
+    helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/ci-pipeline/build-artifact/variables.json -r)
     helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
     helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
     helm upgrade \
@@ -23,7 +23,6 @@ steps:
       --install \
       --wait \
       --version $helmChartVersion \
-      --name $projectName \ 
       --set image.repository=$(registryServerName)/$(projectName) \
       --set ingress.enabled=false \
       -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
