--- a/templates/java/ci-steps-template.yml
+++ b/templates/java/ci-steps-template.yml
@@ -47,6 +47,7 @@ steps:
     helmVersionToInstall: $(helmVersion)
 - script: |
     echo $(registryPassword) | helm registry login $(registryName).azurecr.io --username $(registryLogin) --password-stdin
+    export CHART_NAME=$(projectName)
     helm chart save $(helm package --app-version $(imageTag) --version $(helmChartVersion) ./$(chartHelmFile) | grep -o '/.*.tgz') $(registryName).azurecr.io/charts/$(projectName)
     helm chart push $(registryName).azurecr.io/charts/$(projectName):$(helmChartVersion)
     echo $(jq -n --arg version "$(helmChartVersion)" --arg name "$(projectName)" '{helmChartVersion: $version, projectName: $name}') > $(build.artifactStagingDirectory)/variables.json
