--- a/templates/java/cd-steps-template.yml
+++ b/templates/java/cd-steps-template.yml
@@ -25,8 +25,8 @@ steps:
       --version $helmChartVersion \
       --set image.repository=$(registryServerName)/$(projectName) \
       --set ingress.enabled=false \
-      -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/Chart.yaml \
-      -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/values.yaml \
+      -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/app.yaml \
+      -f $(pipeline.workspace)/ci-pipeline/build-artifact/azure-template-helm-chart/templates/java/$(projectName)/values.yaml \
       $(projectName) \
       $(pipeline.workspace)/install/$(projectName)
   failOnStderr: false
