--- a/templates/cicd-stages-pipeline.yml
+++ b/templates/cicd-stages-pipeline.yml
@@ -1,13 +1,15 @@
 - stage: Build
-  displayName: Build
-  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/master'))
   jobs:
   - job: Build
+    pool:
+      vmImage: ubuntu-latest 
     steps:
     - script: echo Fake build code
 
 - stage: Deploy
   jobs:
   - job: Deploy
+    pool:
+      vmImage: ubuntu-latest 
     steps:
     - script: echo Fake deploy code
