--- a/templates/cicd-stages-pipeline.yml
+++ b/templates/cicd-stages-pipeline.yml
@@ -1,17 +1,18 @@
-- stage: Build
-  displayName: 'Build'
-  jobs:
-  - job: 'Build'
-    pool:
-      vmImage: ubuntu-latest 
-    steps:
-    - script: echo Fake build code
+stages:
+  - stage: Build
+    displayName: 'Build'
+    jobs:
+    - job: 'Build'
+      pool:
+        vmImage: ubuntu-latest 
+      steps:
+      - script: echo Fake build code
 
-- stage: Deploy
-  displayName: 'Deploy'
-  jobs:
-  - job: 'Deploy'
-    pool:
-      vmImage: ubuntu-latest 
-    steps:
-    - script: echo Fake deploy code
+  - stage: Deploy
+    displayName: 'Deploy'
+    jobs:
+    - job: 'Deploy'
+      pool:
+        vmImage: ubuntu-latest 
+      steps:
+      - script: echo Fake deploy code
