--- a/templates/cicd-stages-pipeline.yml
+++ b/templates/cicd-stages-pipeline.yml
@@ -3,11 +3,20 @@ stages:
   displayName: 'Build'
   jobs:
   - job: 'Build'
-    pool:
-      vmImage: ubuntu-latest 
     steps:
-    - script: echo Fake build code
-
+    - task: Docker@2
+      displayName: dockerLogin
+      inputs:
+        command: login
+        containerRegistry: $(dockerRegistryServiceConnectionName)
+    - task: Docker@2
+      displayName: dockerBuild
+      inputs:
+        repository: $(imageName)
+        command: build
+        Dockerfile: $(dockerfile)
+        tags: |
+          $(imageTag)
 - stage: Deploy
   displayName: 'Deploy'
   jobs:
