--- a/templates/dotnet/cd-steps-template.yml
+++ b/templates/dotnet/cd-steps-template.yml
@@ -8,7 +8,7 @@ steps:
 # Download artifact
 - task: DownloadPipelineArtifact@2
   inputs:
-    path: '$(Pipeline.Workspace)/ci-pipeline' 
+    path: ci-pipeline 
     artifact: build-artifact
 
 # Deploy no aks
