--- a/templates/multistage/dotnet/ci-stages-pipeline.yml
+++ b/templates/multistage/dotnet/ci-stages-pipeline.yml
@@ -1,6 +1,6 @@
 stages:
-- stage: Build
-  displayName: 'Build'
+- stage: Build 
+  displayName: 'Build and Push'
   jobs:
   - job: 'Build'
     steps:
@@ -53,13 +53,89 @@ stages:
 
 - stage: Deploy
   displayName: deploy to dev
-  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/master'))
+  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/dev'))
   jobs:
   - deployment: dev
     variables:
     - group: aks-variable-group
     displayName: deploy to aks dev
     environment: development-$(projectName)
+    strategy:
+      runOnce:
+        deploy:
+          steps:               
+            - task: HelmInstaller@1
+              displayName: 'install helm'
+              inputs:
+                helmVersionToInstall: $(helmVersion)
+
+            - bash: |
+                az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
+                az aks get-credentials -n $(aks) -g $(rg)
+                echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
+                helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/build-artifact/variables.json -r)
+                helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+                helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
+                helm upgrade \
+                  --namespace $(k8sNamespace) \
+                  --create-namespace \
+                  --install \
+                  --wait \
+                  --version $helmChartVersion \
+                  --set image.repository=$(registryServerName)/$(projectName) \
+                  --set ingress.enabled=false \
+                  $(projectName) \
+                  $(pipeline.workspace)/install/$(projectName)
+              # failOnStderr: true
+              displayName: 'deploy helm chart'
+
+- stage: Deploy
+  displayName: deploy to staging
+  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/staging'))
+  jobs:
+  - deployment: dev
+    variables:
+    - group: aks-variable-group
+    displayName: deploy to aks hom
+    environment: hom-$(projectName)
+    strategy:
+      runOnce:
+        deploy:
+          steps:               
+            - task: HelmInstaller@1
+              displayName: 'install helm'
+              inputs:
+                helmVersionToInstall: $(helmVersion)
+
+            - bash: |
+                az login --service-principal -u $(aksSpId) -p '$(aksSpSecret)' --tenant $(aksSpTenantId)
+                az aks get-credentials -n $(aks) -g $(rg)
+                echo "$(registryPassword)" | helm registry login $(registryServerName) --username $(registryLogin) --password-stdin
+                helmChartVersion=$(jq .helmChartVersion $(pipeline.workspace)/build-artifact/variables.json -r)
+                helm chart pull $(registryServerName)/charts/$(projectName):$helmChartVersion
+                helm chart export $(registryServerName)/charts/$(projectName):$helmChartVersion --destination $(pipeline.workspace)/install
+                helm upgrade \
+                  --namespace $(k8sNamespace) \
+                  --create-namespace \
+                  --install \
+                  --wait \
+                  --version $helmChartVersion \
+                  --set image.repository=$(registryServerName)/$(projectName) \
+                  --set ingress.enabled=false \
+                  $(projectName) \
+                  $(pipeline.workspace)/install/$(projectName)
+              # failOnStderr: true
+              displayName: 'deploy helm chart'
+
+- stage: Deploy
+  displayName: deploy to prod
+  condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/master'))
+  jobs:
+  - deployment: dev
+    variables:
+    - group: aks-variable-group
+    displayName: deploy to aks prod
+    environment: production-$(projectName)
     strategy:
       runOnce:
         deploy:
