--- a/templates/multistage/dotnet/ci-stages-pipeline.yml
+++ b/templates/multistage/dotnet/ci-stages-pipeline.yml
@@ -97,7 +97,7 @@ stages:
     variables:
     - group: aks-variable-group
     displayName: deploy to aks hom
-    environment: hom-$(projectName)
+    environment: development-$(projectName)
     strategy:
       runOnce:
         deploy:
@@ -135,7 +135,7 @@ stages:
     variables:
     - group: aks-variable-group
     displayName: deploy to aks prod
-    environment: production-$(projectName)
+    environment: development-$(projectName)
     strategy:
       runOnce:
         deploy:
