--- a/templates/multistage/dotnet/ci-stages-pipeline.yml
+++ b/templates/multistage/dotnet/ci-stages-pipeline.yml
@@ -51,7 +51,8 @@ stages:
     - publish: $(build.artifactStagingDirectory)
       artifact: build-artifact
 
-- stage: DeployDev
+# Deployment API 
+- stage: Dev
   displayName: deploy to dev
   condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/dev'))
   jobs:
@@ -89,11 +90,11 @@ stages:
               # failOnStderr: true
               displayName: 'deploy helm chart'
 
-- stage: DeployHom
+- stage: Hom
   displayName: deploy to staging
   condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/staging'))
   jobs:
-  - deployment: dev
+  - deployment: hom
     variables:
     - group: aks-variable-group
     displayName: deploy to aks hom
@@ -127,11 +128,11 @@ stages:
               # failOnStderr: true
               displayName: 'deploy helm chart'
 
-- stage: DeployProd
+- stage: Prod
   displayName: deploy to prod
   condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/master'))
   jobs:
-  - deployment: dev
+  - deployment: prod
     variables:
     - group: aks-variable-group
     displayName: deploy to aks prod
