--- a/templates/multistage/dotnet/ci-stages-pipeline.yml
+++ b/templates/multistage/dotnet/ci-stages-pipeline.yml
@@ -100,7 +100,7 @@ stages:
     variables:
     - group: aks-variable-group
     displayName: deploy to aks staging
-    environment: staging-$(projectName)
+    environment: hom-$(projectName)
     strategy:
       runOnce:
         deploy:
