--- a/templates/multistage/dotnet/ci-stages-pipeline.yml
+++ b/templates/multistage/dotnet/ci-stages-pipeline.yml
@@ -51,7 +51,7 @@ stages:
     - publish: $(build.artifactStagingDirectory)
       artifact: build-artifact
 
-Deployment API 
+# Deployment API 
 - stage: Dev
   displayName: deploy to dev
   dependsOn: ['Build']
