--- a/templates/multistage/dotnet/ci-stages-pipeline.yml
+++ b/templates/multistage/dotnet/ci-stages-pipeline.yml
@@ -132,7 +132,7 @@ stages:
 
 - stage: Prod
   displayName: deploy to prod
-  dependsOn: ['Staging','Dev']
+  dependsOn: ['Staging']
   condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/master'))
   jobs:
   - deployment: prod
